--- a/themes/festival/theme.toml
+++ b/themes/festival/theme.toml
@@ -3,19 +3,13 @@
 
 name = "Festival"
 license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
-description = ""
-homepage = "http://example.com/"
-tags = []
+licenselink = "https://github.com/opera7133/festival-theme/blob/master/LICENSE"
+description = "Single page theme for the festival."
+homepage = "https://github.com/opera7133/festival-theme/"
+tags = [material design, jquery]
 features = []
 min_version = "0.41.0"
 
 [author]
-  name = ""
-  homepage = ""
-
-# If porting an existing theme
-[original]
-  name = ""
-  homepage = ""
-  repo = ""
+  name = "wamo"
+  homepage = "https://wmsci.com"
