--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2.1.0
-      with:
-        fetch-depth: 2
+
+    - name: Checkout submodules
+      shell: bash
+      run: |
+        auth_header="$(git config --local --get http.https://github.com/.extraheader)"
+        git submodule sync --recursive
+        git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
@@ -18,7 +23,7 @@ jobs:
         hugo-version: latest
 
     - name: Build
-      run: hugo --minify
+      run: hugo --theme=festival --gc --minify
 
     - name: FTP-Deploy-Action
       uses: SamKirkland/FTP-Deploy-Action@3.1.1
@@ -26,4 +31,4 @@ jobs:
         ftp-server: ftp://ftp.wmsc.cfbx.jp/public_html/fes/
         ftp-username: ${{ secrets.FTP_USERNAME }}
         ftp-password: ${{ secrets.FTP_PASSWORD }}
-        local-dir: public/
+        local-dir: public
